# nbis

./: Activation.hs  Analyzation.hs  Circuit.hs  ConditionList.hs  DecisionTree.hs  InstrDesc.hs  Main.hs  MemoryModel.hs  Options.hs  Program.hs  Realization.hs  SMTHelper.hs  Setup.hs  Simplifier.hs  TypeDesc.hs  Unrollment.hs  Value.hs  VarStore.hs  furchtbar.cabal  nbis.cabal
Data/Map/: Debug.hs
MemoryModel/: CBMCLike.hs  MemoryGraph.hs  Null.hs  Plain.hs  Rivers.hs  Snow.hs  Typed.hs  Untyped.hs  UntypedBlocks.hs
MemoryModel/Rivers/: Object.hs
MemoryModel/Snow/: Object.hs
include/: furchtbar.h  nbis.h
