Name:		nbis
Version:	0.1
Description:	A model checker for LLVM code
License:	GPL
License-File:	LICENSE
Author:		Henning Günther <guenther@iti.cs.tu-bs.de>
Build-Type:	Custom
Category:	Testing
Cabal-Version:	>= 1.2

Executable nbis
  Main-Is:		Main.hs
  Extensions:           CPP,ScopedTypeVariables
  Other-Modules:
    MemoryModel
    MemoryModel.Untyped
    MemoryModel.Typed
    MemoryModel.Plain
  Build-Depends:	base,bindings-llvm,containers,mtl,smtlib2,fgl,tagged
