Name:		nbis
Version:	0.1
Description:	A model checker for LLVM code
License:	GPL
License-File:	LICENSE
Author:		Henning Günther <guenther@forsyte.at>
Build-Type:	Custom
Category:	Testing
Cabal-Version:	>= 1.2

Flag STP
  Description: Enable support for the STP solver
  Default: False

Flag Boolector
  Description: Enable support for the boolector solver
  Default: False

Flag Yices
  Description: Enable support for the Yices solver
  Default: False

Executable nbis
  Main-Is:		Main.hs
  Extensions:           CPP,ScopedTypeVariables,GADTs,GeneralizedNewtypeDeriving,ParallelListComp,TypeFamilies,FlexibleInstances,RankNTypes,FlexibleContexts,ImpredicativeTypes
  Other-Modules:
    MemoryModel
    MemoryModel.Untyped
    MemoryModel.Typed
    MemoryModel.Plain
    --MemoryModel.Snow
    MemoryModel.Rivers
  Build-Depends:	base,bindings-llvm,containers,mtl,smtlib2,fgl,tagged,random,smtlib2-debug,graphviz
  if flag(STP)
    Build-Depends: smtlib2-stp
    Cpp-Options: -DWITH_STP
  if flag(Boolector)
    Build-Depends: smtlib2-boolector
    Cpp-Options: -DWITH_BOOLECTOR
  if flag(Yices)
    Build-Depends: smtlib2-yices
    Cpp-Options: -DWITH_YICES
  GHC-Options: -fwarn-unused-imports